Added some changes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+   <header>
+    <img src="./" alt="Logo">
+   </header> 
+   <section>
+    <img src="" alt="">
+    <h1>
+
+    </h1>
+    <p>
+        
+    </p>
+</section>
 </body>
 </html>
