--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
    <header>
     <img src="./" alt="Logo">
    </header> 
-   <section>
-    <img src="" alt="">
-    <h1>
-
-    </h1>
-    <p>
-        
-    </p>
-</section>
+   <main>
+        <section>
+            <img src="" alt="">
+            <h1>
+            </h1>
+            <p>
+            </p>
+        </section>
+   </main>
 </body>
 </html>
