--- a/index.html
+++ b/index.html
@@ -8,16 +8,57 @@
 </head>
 <body>
    <header>
-    <img src="./" alt="Logo">
-   </header> 
-   <main>
+    <img src="./images/WebStudio.png" alt="Logo">
+    <nav>
+        <ul>
+            <li><a href="#">Студія</a></li>
+            <li><a href="#">Портфоліо</a></li>
+            <li><a href="#">Контакти</a></li>
+        </ul>
+    </nav>
+    <nav>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li>+38 096 111 11 11</li>
+        </ul>
+    </nav>
+    </header> 
+    <main>
+        <!--Герой-->
         <section>
-            <img src="" alt="">
-            <h1>
-            </h1>
-            <p>
-            </p>
+            <h1>Ефективні рішення для вашого бізнесу</h1>
+            <button>Замовити послугу</button>
         </section>
-   </main>
+        <!--Наші переваги-->
+        <section>
+            <ul>
+                <li>
+                    <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                </li>
+                <li>
+                    <h2>ПУНКТУАЛЬНІСТЬ</h2>
+                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                </li>
+                <li>
+                    <h2>ПЛАНУВАННЯ</h2>
+                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                </li>
+                <li>
+                    <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                </li>
+            </ul>
+        </section>
+        <!--Напрямки діяльності-->
+        <section>
+            <h1>Чим ми займаємося</h1>
+            <ul>
+                <li><img src="./images/box 1.png" alt="Developing" width="370"></li>
+                <li><img src="./images/box 2.png" alt="Prototyping" width="370"></li>
+                <li><img src="./images/box 3.png" alt="Design" width="370"></li>
+            </ul>
+        </section>
+    </main>
 </body>
 </html>
