--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
    <header>
-        <a href="#">WEBSTUDIO</a>
+        <a href="">webstudio</a>
         <nav>
             <ul>
-                <li><a href="#">Studio</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a href="">Studio</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Contacts</a></li>
             </ul>
         </nav>
         <ul>
@@ -29,6 +29,8 @@
         </section>
         <!--Our advantages-->
         <section>
+            <!--Заголовок цієї секції буде приховано через CSS-->
+            <h2>Our advantages</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -87,7 +89,7 @@
         </section>
     </main>
     <footer>
-        <a href="#">WEBSTUDIO</a>
+        <a href="">webstudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
