--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             </ul>
         </nav>
         <ul>
-            <li>info@devstudio.com</li>
-            <li>+11 (000) 111-11-11</li>
+            <li><a href="">info@devstudio.com</a></li>
+            <li><a href="">+11 (000) 111-11-11</a></li>
         </ul>
     </header>
     <main>
@@ -85,6 +85,11 @@
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
+            </ul>
+            <ul class="social-links">
+                <li><a class="link" href="https://twitter.com">Twitter</a></li>
+                <li><a class="link" href="https://www.instagram.com">Instagram</a></li>
+                <li><a class="link" href="https://www.facebook.com">Facebook</a></li>
             </ul>
         </section>
     </main>
